# CRRTemp

./: .gitignore  CodeRedRobot2013.yml
CodeRedRobot2014/: .project  .wrproject  CMakeCache.txt  CMakeLists.txt  InvertedIOButton.cpp  InvertedIOButton.h  Makefile  OI.cpp  OI.h  OIMap.h  Robot.cpp  Robot.h  RobotMap.cpp  RobotMap.h  TripleMotorOutput.cpp  TripleMotorOutput.h  cmake_install.cmake
CodeRedRobot2014/Commands/: ArmLower.cpp  ArmLower.h  ArmRaise.h  AutonomousCommand.cpp  AutonomousCommand.h  BallToShooter.cpp  EjectBall.cpp  EjectBall.h  Fire.cpp  Fire.h  JoystickAutoDrive.h  JoystickDrive.cpp  JoystickDrive.h  RollerReverse.h  RollerSpin.h  RollerStop.h  ShiftHigh.cpp  ShiftHigh.h  ShiftLow.cpp  ShiftLow.h  SimpleAuton.cpp  SimpleAuton.h  VisionAuton.cpp  VisionAuton.h  VisionAutonLow.cpp
CodeRedRobot2014/Commands/Acquisition/: ArmLower.cpp  ArmLower.h  ArmRaise.cpp  ArmRaise.h  RollerReverse.cpp  RollerReverse.h  RollerSpin.cpp  RollerSpin.h  RollerStop.cpp  RollerStop.h
CodeRedRobot2014/Commands/Autonomous/: AutonomousCommand.cpp  AutonomousCommand.h  DriveAuton.cpp  DriveAuton.h  SimpleAuton.cpp  SimpleAuton.h  TwoBallAuton.cpp  TwoBallAuton.h  VisionAuton.cpp  VisionAutonLow.cpp  VisionAutonLow.h
CodeRedRobot2014/Commands/Drive/: DriveToDistance.cpp  DriveToDistance.h  JoystickAutoDrive.cpp  JoystickAutoDrive.h  JoystickDrive.cpp  JoystickDrive.h  ShiftHigh.cpp  ShiftHigh.h  ShiftLow.cpp  ShiftLow.h
CodeRedRobot2014/Subsystems/: Acquisition.cpp  Acquisition.h  Drive.cpp  Drive.h  Ejection.cpp  Ejection.h  Shooter.cpp  Shooter.h  Vision.cpp
(+750 files in other folders)
